<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/nav_search"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/search" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/setting" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/rate" />
            <item
                android:id="@+id/nav_update"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/update" />
        </menu>
    </item>

</menu>
