<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/btnsearch"
        android:orderInCategory="100"
        android:icon="@drawable/searchicon"
        app:showAsAction="always"
        android:title="@string/search"/>

    <item
        android:id="@+id/btnshare"
        android:orderInCategory="100"
        android:icon="@drawable/share"
        app:showAsAction="always"
        android:title="@string/share"/>

    <item
        android:id="@+id/action_favorite"
        android:orderInCategory="100"
        android:icon="@drawable/favorite_selector"
        app:showAsAction="always"
        android:title="@string/fav_menu"/>
    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:icon="@drawable/main"
        app:showAsAction="always"
        android:title="@string/return_home" />




</menu>